@@ -95,6 +95,9 @@ Trunk (not yet released)
     AVRO-1882: Java: Fix ConcurrentHashMap with non-string keys.
     (Sachin Goyal via blue)
 
+    AVRO-1929: Java: SchemaCompatibility fails to recognize
+    string<->bytes promotion.  (Anders Sundelin via cutting)
+
 Avro 1.8.1 (14 May 2016)
 
   INCOMPATIBLE CHANGES
